# ar5iv

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  Rocket.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: improve-article--arxiv-id-.md
.github/workflows/: ci.yml
assets/: ar5iv-fonts.0.7.9.min.css  ar5iv-fonts.0.8.0.min.css  ar5iv-fonts.0.8.1.min.css  ar5iv-fonts.0.8.3.css  ar5iv-fonts.0.9.0.css  ar5iv-site.0.2.0.css  ar5iv-site.0.2.1.css  ar5iv-site.0.2.2.css  ar5iv-site.css  ar5iv.0.7.2.min.css  ar5iv.0.7.3.min.css  ar5iv.0.7.4.min.css  ar5iv.0.7.5.min.css  ar5iv.0.7.6.min.css  ar5iv.0.7.7.min.css  ar5iv.0.7.9.min.css  ar5iv.0.8.0.min.css  ar5iv.0.8.1.min.css  ar5iv.0.8.2.min.css  ar5iv.0.8.3.css  ar5iv.0.8.4.css  ar5iv.0.8.5.css  ar5iv.0.9.0.css  ar5iv.css
benches/: dirty_render.rs
deploy/: ar5iv.service
src/: assemble_asset.rs  cache.rs  constants.rs  dirty_templates.rs  dom_templates.rs  lib.rs  main.rs  paper_order.rs
templates/: 404.html.tera  ar5iv.html.tera
