[package]
name = "ar5iv"
version = "0.2.2"
edition = "2021"
default-run = "ar5iv"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
zip = "4.2"
walkdir = "2"
redis = "0.32.3"
rand = "0.9.1"
crossbeam = "0.8.1"
libxml = "0.3.0"
unicode-segmentation = "1.8.0"
rocket ="0.5.0"
rocket_dyn_templates = {version="0.1.0", features = ["tera"]}
rocket_db_pools = { version = "0.2.0", features = ["deadpool_redis"]}

[[bin]]
path = "src/main.rs"
name = "ar5iv"

[[bin]]
path = "bin/cache_adjacency_map.rs"
name = "cache_adjacency_map"

[dev-dependencies]
criterion = {version = "0.3.5", features=["async_tokio"]}

[[bench]]
name = "dirty_render"
harness = false
